@@ -18,6 +18,8 @@ S3method(fortify,distrProfile)
 S3method(fortify,trackeRWprime)
 S3method(fortify,trackeRdata)
 S3method(fortify,trackeRdataSummary)
+S3method(funPCA,concProfile)
+S3method(funPCA,distrProfile)
 S3method(getOperations,conProfile)
 S3method(getOperations,distrProfile)
 S3method(getOperations,trackeRdata)
@@ -32,6 +34,7 @@ S3method(plot,trackeRWprime)
 S3method(plot,trackeRdata)
 S3method(plot,trackeRdataSummary)
 S3method(plot,trackeRdataZones)
+S3method(plot,trackeRfpca)
 S3method(print,trackeRdataSummary)
 S3method(scaled,distrProfile)
 S3method(smoother,conProfile)
@@ -65,6 +68,7 @@ export(ft_per_s2km_per_min)
 export(ft_per_s2m_per_s)
 export(ft_per_s2mi_per_h)
 export(ft_per_s2mi_per_min)
+export(funPCA)
 export(getOperations)
 export(getUnits)
 export(h2h)
@@ -131,6 +135,7 @@ export(min_per_mi2min_per_mi)
 export(min_per_mi2s_per_m)
 export(nsessions)
 export(plotRoute)
+export(profile2fd)
 export(readContainer)
 export(readDB3)
 export(readDirectory)
